--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -6,12 +6,15 @@
     <title>Shmancy Movies</title>
   </head>
   <body>
+    <h1>Shmancy Movies</h1>
+    <h2>Search</h2>
     <form>
       <input type="text" />
       <button type="submit">Submit</button>
     </form>
     <ul>
     </ul>
+    <h2>View Favorites</h2>
   <script src="/js/app.js"></script>
   </body>
 </html>
