--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -9,12 +9,14 @@
     <h1>Shmancy Movies</h1>
     <h2>Search</h2>
     <form>
-      <input type="text" />
+      <input type="text">
       <button type="submit">Submit</button>
     </form>
-    <ul>
+    <ul id="results">
     </ul>
-    <h2>View Favorites</h2>
+    <button onclick="viewFavorites();">View Favorites</button>
+    <ul id="favorites">
+    </ul>
   <script src="/js/app.js"></script>
   </body>
 </html>
