--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -14,6 +14,9 @@
     </form>
     <ul id="results">
     </ul>
+    <h2>Movie Details</h2>
+    <ul id="details">
+    </ul>
     <button onclick="viewFavorites();">View Favorites</button>
     <ul id="favorites">
     </ul>
