--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -2,24 +2,37 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
+    <link href='/css/styles.css' rel='stylesheet' type='text/css'>
 
     <title>Shmancy Movies</title>
   </head>
   <body>
     <h1>Shmancy Movies</h1>
-    <h2>Search</h2>
-    <form>
-      <input type="text">
-      <button type="submit">Submit</button>
-    </form>
-    <ul id="results">
-    </ul>
-    <h2>Movie Details</h2>
-    <ul id="details">
-    </ul>
-    <button onclick="viewFavorites();">View Favorites</button>
-    <ul id="favorites">
-    </ul>
-  <script src="/js/app.js"></script>
+    <div class="container">
+      <div class="col-1">
+        <div id="search-box">
+          <h2>Search</h2>
+          <form>
+            <input type="text">
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <div id="results-box">
+          <ul id="results">
+          </ul>
+          <button onclick="viewFavorites();">View Favorites</button>
+          <ul id="favorites">
+          </ul>
+        </div>
+      </div>
+      <div id="details-box" class="col-2">
+        <h2>Movie Details</h2>
+        <ul id="details">
+          <li>Search for a movie, click 'Details' and see movie information appear here.</li>
+        </ul>
+      </div>
+    </div>
+    <script src="/js/app.js"></script>
   </body>
 </html>
