--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+    <!-- Fonts and CSS -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
     <link href='/css/styles.css' rel='stylesheet' type='text/css'>
 
@@ -9,7 +11,9 @@
   </head>
   <body>
     <h1>Shmancy Movies</h1>
+
     <div class="container">
+
       <div class="col-1">
         <div id="search-box">
           <h2>Search</h2>
@@ -18,6 +22,7 @@
             <button type="submit">Submit</button>
           </form>
         </div>
+
         <div id="results-box">
           <ul id="results">
           </ul>
@@ -26,12 +31,14 @@
           </ul>
         </div>
       </div>
+
       <div id="details-box" class="col-2">
         <h2>Movie Details</h2>
         <ul id="details">
           <li>Search for a movie, click 'Details' and see movie information appear here.</li>
         </ul>
       </div>
+
     </div>
     <script src="/js/app.js"></script>
   </body>
