Added detail button for favorited movies

--- a/ruby-backend-starter-code/views/index.html
+++ b/ruby-backend-starter-code/views/index.html
@@ -26,6 +26,10 @@
         <div id="results-box">
           <ul id="results">
           </ul>
+        </div>
+
+        <div id="favorites-box">
+          <h2>Favorites</h2>
           <button onclick="viewFavorites();">View Favorites</button>
           <ul id="favorites">
           </ul>
