--- a/ruby-backend-starter-code/public/css/styles.css
+++ b/ruby-backend-starter-code/public/css/styles.css
@@ -7,6 +7,15 @@ body {
     font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 300;
+}
+
 /* display the search box inline with the search header */
 #search-box h2,
 #search-box form {
